--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <div class="bottom">
                         <div class="left">
                             <small>Card Holder</small>
-                            <h5>WILLIAM PI</h5>
+                            <h5>SHAUN S</h5>
                         </div>
                         <div class="right">
                             <div class="expiry">
@@ -157,7 +157,7 @@
                     <div class="bottom">
                         <div class="left">
                             <small>Card Holder</small>
-                            <h5>WILLIAM PI</h5>
+                            <h5>SHAUN S</h5>
                         </div>
                         <div class="right">
                             <div class="expiry">
@@ -189,7 +189,7 @@
                     <div class="bottom">
                         <div class="left">
                             <small>Card Holder</small>
-                            <h5>WILLIAM PI</h5>
+                            <h5>SHAUN S</h5>
                         </div>
                         <div class="right">
                             <div class="expiry">
